trunk/Archive2/7c/b9dbae2a0ba4b0/output
main.cpp: In function 'int main()':
main.cpp:39:42: error: 'DataType' was not declared in this scope
     typedef std::common_type< DataTypeT, DataType >::type QuadT;
                                          ^
main.cpp:39:51: error: template argument 2 is invalid
     typedef std::common_type< DataTypeT, DataType >::type QuadT;
                                                   ^
main.cpp:39:59: error: expected initializer before 'QuadT'
     typedef std::common_type< DataTypeT, DataType >::type QuadT;
                                                           ^
main.cpp:41:141: error: 'QuadT' was not declared in this scope
     std::cout << "datatype: " << typeid( uc1 ).name() << "; " << uc1_sq << " type=" << typeid( uc1_sq ).name() << " result-of: " << typeid( QuadT ).name() << std::endl;
                                                                                                                                             ^
